[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ballast"
version = "0.6.0"
description = "Portfolio construction and risk engine. Companion to Sentinel."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Brant Anderson" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "duckdb>=0.10",
    "yfinance>=0.2.40",
]

# Notes: extras keep the core install light. Heavy/optional stacks install
# only when their milestone needs them:
#   opt     -> cvxpy solvers, used by optimize/ from v0.5.0
#   factors -> statsmodels for cross-sectional WLS, used from v0.4.0
#   dev     -> everything `make check` runs
[project.optional-dependencies]
opt = ["cvxpy>=1.4"]            # v0.5.0 optimizers
factors = ["statsmodels>=0.14"] # v0.4.0 cross-sectional regressions
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.10", "cvxpy>=1.4"]  # cvxpy: optimizer tests run in CI

[project.scripts]
ballast = "ballast.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ballast"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# Explicit first-party so classification doesn't depend on whether ballast is
# pip-installed: newer ruff treats installed packages as third-party, which
# flipped CI (editable install) vs local runs.
[tool.ruff.lint.isort]
known-first-party = ["ballast", "tests"]

[tool.mypy]
# No python_version pin: each CI job checks against its own interpreter.
# Pinning 3.11 made mypy parse numpy's stubs as 3.11 syntax, which breaks
# once numpy ships PEP 695 type statements (any runner on 3.12+).
mypy_path = "src"
packages = ["ballast"]
ignore_missing_imports = true

# pythonpath lets pytest import src/ballast without an editable install.
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
